[gd_scene load_steps=8 format=2]

[ext_resource path="res://DatingSim/style_log_choice.tres" type="StyleBox" id=1]
[ext_resource path="res://DatingSim/style_log.tres" type="StyleBox" id=2]
[ext_resource path="res://DatingSim/LogItem.gd" type="Script" id=3]
[ext_resource path="res://DatingSim/style_log_choice_hovered.tres" type="StyleBox" id=4]
[ext_resource path="res://DatingSim/Cantarell-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 5 )

[node name="Control" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
focus_mode = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer"]
margin_top = 281.0
margin_right = 1010.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Sample adventure text! "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtfLabel" type="RichTextLabel" parent="MarginContainer"]
visible = false
margin_right = 1010.0
margin_bottom = 586.0
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
[connection signal="queueDeletion" from="." to="." method="_on_Control_queueDeletion"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
